Fixed text sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -493,7 +493,7 @@ body {
 }
 
 .bento-container .primary-small {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .bento-container .secondary {
